docs(swagger): 补全增删改查swagger文档
