# examples/model/base.go
@@ -14,7 +14,7 @@ type ID int64
 
 type Base struct {
     Id        ID        `db:"id"`
-    CreatorId ID        `db:"creator_id"`
+    CreatorId ID        `db:"creator_id" `
     CreatedAt time.Time `db:"created_at"`
     UpdatorId ID        `db:"updator_id"`
     UpdatedAt time.Time `db:"updated_at"`
